syntax = "proto3";
package auth;

option go_package = "authentication/src/gen/proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Verify(VerifyRequest) returns (VerifyResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}

  // Method for querying users
  // rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  map<string, string> claims = 3;
}


message LoginRequest {
  string redirect_url = 1;
}

message LoginResponse {
  string auth_url = 1;
}

message VerifyRequest {
  string code = 1;
}

message VerifyResponse {
  string access_token = 1;
  string id_token = 2;
  string profile = 3;
}

message LogoutRequest {
  string return_url = 1;
}

message LogoutResponse {
  string logout_url = 1;
}
